# rules_docker_compose

./: .bazelrc  .gitattributes  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  docker_compose_binary.html  docker_compose_config.html  docker_compose_test.html  docker_compose_toolchain.html  docker_compose_yaml.html  extensions.html  go.mod  index.html  print.html  rules.html  sadness.bzl  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: github.bazelrc  release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docker_compose/: BUILD.bazel  defs.bzl  docker_compose_binary.bzl  docker_compose_config.bzl  docker_compose_test.bzl  docker_compose_toolchain.bzl  docker_compose_yaml.bzl  extensions.bzl
docker_compose/private/: BUILD.bazel  docker_compose.bzl  image_utils.bzl  toolchain.bzl  toolchain_repo.bzl  versions.bzl
docker_compose/private/digest/: BUILD.bazel  digest.go
docker_compose/private/launcher/: BUILD.bazel  launcher.go
docker_compose/private/merger/: BUILD.bazel  merger.go
docker_compose/private/runner/: BUILD.bazel  runner.go
docker_compose/private/tests/env_file/: .env  BUILD.bazel  docker-compose.yaml  golden-starlark-env-file.yaml  golden-yaml-env-file.yaml
docker_compose/private/tests/image_deps_img/: BUILD.bazel  docker-compose-service_c.yaml  docker-compose.yaml  golden-docker-compose-service_c.yaml  golden-docker-compose.yaml
docker_compose/private/tests/image_deps_oci/: BUILD.bazel  docker-compose-service_c.yaml  docker-compose.yaml  golden-docker-compose-service_c.yaml  golden-docker-compose.yaml
docker_compose/private/tests/simple_test/: BUILD.bazel  simple_tester.go
docker_compose/private/tests/simple_test/img/: BUILD.bazel  docker-compose.yaml
docker_compose/private/tests/simple_test/oci/: BUILD.bazel  docker-compose.yaml
docker_compose/private/tests/simple_yaml/: BUILD.bazel  docker-compose.yaml  golden-docker-compose.yaml
docker_compose/settings/: BUILD.bazel  settings.bzl
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  rules.md
examples/python/: BUILD.bazel  MODULE.bazel  docker-compose.yaml  tester.py
examples/python/requirements/: requirements.in  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
examples/rust/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  WORKSPACE.bazel  cargo-bazel-lock.json  docker-compose.yaml  requirements.in  tester.rs
tools/bzl_version/: bzl_version_test.go
tools/update_versions/: update_versions.py
