load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bazel_tools_bzl_lib",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//docker_compose:__pkg__"],
    deps = [
        ":bazel_tools_bzl_lib",
        "@bazel_skylib//rules:common_settings",
    ],
)
